--- a/public/index.html
+++ b/public/index.html
@@ -4,22 +4,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <script type="text/javascript" src="js/main.js"></script>
+    <script type="text/javascript" src="/src/index.js"></script>
     <link href="https://fonts.googleapis.com/css?family=Montserrat:300,300i,400,400i,700" rel="stylesheet">
-    <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="/public/main.css">
     <title>Portfolio site</title>
 </head>
 <body>
     <header>
         <div class="main-header">
-            <div class="header-menu-icon">
-                <div class="header-hamburger-icon"></div>
+            <div class="main-header-menu-icon">
+                <div class="main-header-menu-icon-hamburger"></div>
             </div>
             <span class="logo-header">Bartosz Lewandowski</span>
         </div>
     </header>
     <main>
-        
-    </main>  
+
+    </main>
 </body>
 </html>
