menu animation fixes

--- a/public/index.html
+++ b/public/index.html
@@ -13,9 +13,9 @@
 
 <body>
   <header>
-    <div class="main-header-animation three"></div>
-    <div class="main-header-animation two"></div>
-    <div class="main-header-animation one"></div>
+    <div class="animation three"></div>
+    <div class="animation two"></div>
+    <div class="animation one"></div>
     <div class="main-header">
       <div class="main-header-menu-icon">
         <div class="main-header-menu-icon-hamburger"></div>
