--- a/public/index.html
+++ b/public/index.html
@@ -23,7 +23,13 @@
       <span class="logo-header">Bartosz Lewandowski</span>
     </div>
   </header>
-  <main>
+  <main class="main-content">
+    <h1 class="main-content-hero-text-one">
+      <span>Hello, my name is Bartek</span>
+    </h1>
+    <h2 class="main-content-hero-text-two">
+      <span>I’m Frontend Web developer & designer</span>
+    </h2>
 
   </main>
 </body>
