--- a/public/index.html
+++ b/public/index.html
@@ -23,14 +23,13 @@
       <span class="logo-header">Bartosz Lewandowski</span>
     </div>
   </header>
-  <main class="main-content">
+  <main class="main-content-hero">
     <h1 class="main-content-hero-text-one">
-      <span>Hello, my name is Bartek</span>
+      Hello, my name is Bartek
     </h1>
     <h2 class="main-content-hero-text-two">
-      <span>I’m Frontend Web developer & designer</span>
+      I’m Frontend Web developer & designer
     </h2>
-
   </main>
 </body>
 
