bg stil doing goddamn text appear

--- a/public/index.html
+++ b/public/index.html
@@ -24,9 +24,9 @@
     </div>
   </header>
   <main class="main-content-hero">
-    <h1 class="main-content-hero-text-one">
-      Hello, my name is Bartek
-    </h1>
+    <div>
+      <h1 class="main-content-hero-text-one">Hello, my name is Bartek</h1>
+    </div>
     <h2 class="main-content-hero-text-two">
       I’m Frontend Web developer & designer
     </h2>
