--- a/template.html
+++ b/template.html
@@ -31,6 +31,6 @@
       I’m Frontend Web developer & designer
     </h2>
   </main>
-<script type="text/javascript" src="/assets/main_1383963c1bb4e89db5db.min.js"></script></body>
+</body>
 
 </html>
