--- a/template.html
+++ b/template.html
@@ -7,7 +7,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <!-- <script type="text/javascript" src="/src/index.js"></script> -->
   <link href="https://fonts.googleapis.com/css?family=Montserrat:300,300i,400,400i,700" rel="stylesheet">
-  <link rel="stylesheet" href="/main.css">
+  <!-- <link rel="stylesheet" href="/assets/main.css"> -->
   <title>Portfolio site</title>
 </head>
 
